--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-asgiref==3.4.1
-click==8.0.1
-fastapi==0.68.1
-h11==0.12.0
-httptools==0.2.0
-numpy==1.21.2
-pydantic==1.8.2
-python-dotenv==0.19.0
-PyYAML==5.4.1
-starlette==0.14.2
-symspellpy==6.7.0
-typing-extensions==3.10.0.2
-uvicorn==0.15.0
-uvloop==0.16.0
-watchgod==0.7
-websockets==9.1
+anyio==3.4.0; python_version >= "3.6" and python_full_version >= "3.6.2"
+asgiref==3.4.1; python_version >= "3.6"
+click==8.0.3; python_version >= "3.6"
+colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.5.0"
+editdistpy==0.1.3; python_version >= "3.6"
+fastapi==0.70.1; python_full_version >= "3.6.1"
+h11==0.12.0; python_version >= "3.6"
+idna==3.3; python_version >= "3.6" and python_full_version >= "3.6.2"
+pydantic==1.8.2; python_full_version >= "3.6.1"
+sniffio==1.2.0; python_version >= "3.6" and python_full_version >= "3.6.2"
+starlette==0.16.0; python_version >= "3.6" and python_full_version >= "3.6.1"
+symspellpy==6.7.6; python_version >= "3.6"
+typing-extensions==4.0.1; python_version >= "3.6" and python_full_version >= "3.6.1"
+uvicorn==0.16.0
