--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 fastapi = "^0.70.1"
 uvicorn = "^0.16.0"
 symspellpy = "^6.7.6"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 
